# agentpro

./: .env.example  README.md  notes.txt  package.json  requirements.txt
backend/: Dockerfile  fly.toml  pyproject.toml  sql_app.db
backend/app/: main.py
backend/app/models/: database.py  models.py
backend/app/routers/: clustering.py
backend/app/schemas/: clustering.py
backend/app/services/: clustering.py  text_clustering.py
backend/tests/: test_clustering_api.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatPreview.tsx  ClusterResults.tsx  ModelSelector.tsx  TaskEditor.tsx  TextInput.tsx
frontend/src/lib/: api.ts
src/: main.py
src/routers/: chat.py
src/services/: claude_service.py
src/tasks/order_cancellation/: api.py  models.py  workflow.md  workflow_manager.py
tests/: test_order_cancellation.py
