[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.27.1"
scikit-learn = "1.2.2"
numpy = "1.24.3"
pandas = "1.5.3"
sqlalchemy = "^2.0.36"
jieba = "^0.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
